fix bug on mobile btn hover

--- a/src/scss/components/mobile-btn.scss
+++ b/src/scss/components/mobile-btn.scss
@@ -63,9 +63,11 @@
   }
   &.mobile-btn--active:hover {
     &::before,
-    &::after,
-    span {
+    &::after {
       background-color: red;
+    }
+    span {
+      background-color: transparent;
     }
   }
 }
